[gd_scene load_steps=4 format=3 uid="uid://dafrdpmlh500b"]

[ext_resource type="Script" path="res://Scripts/ScoreUI.gd" id="1_ssiqm"]
[ext_resource type="Texture2D" uid="uid://7turikd1h6fb" path="res://Assets/Art/Slimes/Jam-A-Slime-A-Big-Grayscale.png" id="2_nd6fa"]

[sub_resource type="Theme" id="Theme_o2f3o"]
Label/colors/font_color = Color(0.207843, 0.854902, 0.207843, 1)
Label/colors/font_outline_color = Color(1, 1, 1, 1)
Label/constants/outline_size = 8
Label/font_sizes/font_size = 80

[node name="ScoreUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ssiqm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_o2f3o")
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Player1Score" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Score 1"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme_override_constants/separation = -17

[node name="Slime1Texture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 64)
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_nd6fa")
expand_mode = 1

[node name="Slime1Count" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "x4"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="Player2Score" type="Label" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.913725, 0.133333, 0.133333, 1)
text = "Score 2"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = -17

[node name="Slime2Texture" type="TextureRect" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 64)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("2_nd6fa")
expand_mode = 1

[node name="Slime2Count" type="Label" parent="MarginContainer/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.913725, 0.133333, 0.133333, 1)
theme_override_font_sizes/font_size = 48
text = "x4"
